# ECE454_Computer_Systems_Programming

lab2/: implementation.c
lab3/src/: mm.c
lab4/element_lock/: meson.build  randtrack_element_lock.cpp
lab4/list_lock/: meson.build  randtrack_list_lock.cpp
lab4/original/: meson.build  randtrack.cpp
lab4/original_TM/: meson.build  randtrack.cpp
lab4/reduction/: meson.build  randtrack_reduction.cpp
lab4/single_global/: meson.build  randtrack_global_lock.cpp
lab5/: description.txt  life.c  meson.build
